--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Insurance Guesser</title>
+		<title>Thelemic</title>
 
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -27,27 +27,23 @@
   </head>
   <body>
 	
-	<nav class="navbar navbar-default navbar-static-top">
-		<div class="container-fluid">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">ML</a>
-			</div>
-		</div><!-- /.container-fluid -->
-	</nav>
-
-		<div class="container-fluid" ng-app="App">
-			<div class="col-xs-12">
-				<div class="well" ng-view>
-					
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">Thelemic</a>
 				</div>
-			</div>
+			</div><!-- /.container-fluid -->
+		</nav>
+
+		<div class="container" ng-app="Thelemic">
+			<div ng-view></div>
 		</div>
   </body>
 </html>
