further frontend work

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 			</div><!-- /.container-fluid -->
 		</nav>
 
-		<div class="container" ng-app="Thelemic">
+		<div class="container" ng-app="Thelemic" ng-cloak>
 			<div ng-view></div>
 		</div>
   </body>
