--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
 
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="lib/ui-bootstrap-csp.css" rel="stylesheet">
 		<link href="style.css" rel="stylesheet">
 		
