--- a/src/repo-template/configuration.html
+++ b/src/repo-template/configuration.html
@@ -45,6 +45,8 @@
         has Wiki
     </button>
 
-    <a href="#!/create" class="btn btn-primary" ng-click="next()">Next</button>
+    <div>
+        <a href="#!/create" class="btn btn-primary" ng-click="next()">Next</a>
+    </div>
 
 </div>
