--- a/src/org-select/org-select.html
+++ b/src/org-select/org-select.html
@@ -7,9 +7,11 @@
     <div class="col-xs-12" ng-show="auth.success">
         <h1>Choose your destiny</h1>
         <div class="list-group org-list">
-            <a href="#!/org/{{ org.login }}" class="list-group-item" ng-repeat="org in orgs">
+            <a href="#!/org/{{ org.login }}" class="list-group-item" ng-repeat="org in orgs" uib-tooltip="{{ org.description }}" tooltip-popup-delay="750" tooltip-placement="top-right">
                 <img class="avatar" ng-src="{{ org.avatar_url }}" />
-                <span class="org-info">{{ org.login }} <span class="description text-muted">a {{ org.description }}</span></span>
+                <span class="org-info">
+                    {{ org.login }}
+                </span>
             </a>
         </div>
     </div>
