--- a/src/repo-template/repo-template.html
+++ b/src/repo-template/repo-template.html
@@ -9,6 +9,7 @@
     <div class="col-xs-12 summary">
         The repository <span class="repo-name">{{orgName}}/{{repoName}}</span> will have the following properties
 
+        {{ templateName }}
         <ul class="features">
             <li><i class="fa fa-fw" ng-class="indicator(repoTemplate.config.private)"></i> Private Repository</li>
             <li><i class="fa fa-fw" ng-class="indicator(repoTemplate.config.has_issues)"></i> has Issues</li>
