refactor: code cleanup

--- a/src/repo-template/repo-template.html
+++ b/src/repo-template/repo-template.html
@@ -33,7 +33,7 @@
                     <li><i class="fa fa-fw" ng-class="indicator(selectedRepoTemplate.config.allow_squash_merge)"></i> Squash Merge allowed</li>
                     <li><i class="fa fa-fw" ng-class="indicator(selectedRepoTemplate.config.allow_merge_commit)"></i> Merge Commit allowed</li>
                     <li><i class="fa fa-fw" ng-class="indicator(selectedRepoTemplate.config.allow_rebase_merge)"></i> Rebase Merge allowed</li>
-                    <li><i class="fa fa-fw fa-info"></i> Gitignore template: {{ selectedRepoTemplate.config.gitignore_template }}</li>
+                    <li><i class="fa fa-fw fa-info-circle text-info"></i> Gitignore template: {{ selectedRepoTemplate.config.gitignore_template }}</li>
                 </ul>
 
                 <div ng-show="selectedRepoTemplate.label">
