--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Thelemic</title>
+		<title>limnetic</title>
 
 
 		<link href="css/font-awesome.min.css" rel="stylesheet">
@@ -37,12 +37,12 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">Thelemic</a>
+					<a class="navbar-brand" href="#">limnetic</a>
 				</div>
 			</div><!-- /.container-fluid -->
 		</nav>
 
-		<div class="container" ng-app="Thelemic" ng-cloak>
+		<div class="container" ng-app="limnetic" ng-cloak>
 			<div ng-view></div>
 		</div>
   </body>
