use smaller repository input ui element

--- a/src/repo-template/repo-template.html
+++ b/src/repo-template/repo-template.html
@@ -11,7 +11,7 @@
             </span>
         </p>
         <form name="repoForm">
-            <div class="input-group input-group-lg repo-name-input">
+            <div class="input-group repo-name-input">
                 <span class="input-group-addon">{{ orgName }}/</span>
                 <input name="name" type="text" class="form-control" placeholder="Your Repo Name" ng-pattern="selectedRepoTemplate.pattern" ng-required="true" ng-model="repoName">
             </div>
